WendzelNNTPd ChangeLog:

----------------- version 2.x ------------------

2.1.4-UNSTABLE "St. Peter-Ording" : t.b.d.
***TODO***:
 - Check functioning of "posting (not) allowed" flag on MySQL database.
 - Excessive testing of the POST function because of the removed
   memory leaks.
ADDED FEATURES:
 - Finally, the "posting allowed" flag is considered in POST.
FIXES:
 - Fixed some memory leaks during postings that would occur on rather
   rare errors.
MISC:
 - Updated SBo script to work with v. 2.1.3; fixed bug that made
   /usr/doc/wendzelnntpd-$ver/docs inaccessible (+x permission was
   missing)
 - Shifted manpages to docs/

2.1.3-stable "Friedrichroda" : 17-Apr-2021:
 As usual, every new release gets named after a nice travel location.
 This time it is Friedrichroda, Germany.
FIXES:
 - Do not exit on SIG_PIPE (broken pipe) *** security fix (DoS) ***.
    This would be exploitable easily by "echo | telnet hostname port"!
    This fix requires support for the send() flag MSG_NOSIGNAL. Seems
    to be present in *BSD and Linux (at least).
 - Modified regex checks during POST command:
   - Prevent postings to Newsgroups: ,,,
   - Prevent sender '@'
   - Prevent \r\n\t in subjects
   - Unified structure of regex tests with macros
 - Minor fix in documentation for ACL management.
ADDED FEATURES:
 - Created the manpages `wendzelnntpd(8)` and `wendzelnntpadm(8)`.
 - The make target "install" now installs manpages, too.
MISC:
 - Listen on ::1 per default, too (in addition to 127.0.0.1).
 - Slackware build script does not require `make install` anymore,
   which makes the whole process much cleaner. Also, this is quicker.
 - Added additional meta-data for Slackbuild.com compatibility (beta).
 - Applied several adjustments and improvements from SBo's repository.
 - Improved some comments in the code.

2.1.2-stable "Sydney/Waverton" : 29-Mar-2021
 ADDED_FEATURES:
 - Slackware package for amd64 was added (beta!)